하이퍼링크 수정

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>NFT ARTIST UNION</h1>
-								<p>공동 로드맵부터 매니지먼트까지 NFT아티스트들의 놀이터 NAU</p>
+								<p>공동 로드맵부터 매니지먼트까지 NFT아티스트들의 놀이터</p>
 								
 							</div>
 						</div>
@@ -345,8 +345,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-discord"><span class="label">Facebook</span></a></li>
+							<li><a href="https://twitter.com/NFTArtistUnion" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://discord.gg/7PryhkPh" target="_blank" class="icon brands fa-discord"><span class="label">Discode</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 						<p class="copyright">&copy; 2022 NAU All rights reserved.</p>
