인스타그램 주석처리

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 							<article id="ABOUT">
 								<h2 class="major">ABOUT</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>소개글 추가예정</p>
+								<p>NAU는 NFT아티스트의 놀이터이다. NFT라는 새로운 시장에 접근하기 힘든 기존 아티스트들과 함께 놀며 공동의 작품을 창작 하고자 시작하게 되었다.</p>
+									<p>아티스트에게 창작에 집중 할 수 있는 환경을 구축해주고, NFT 아트 ‘예술성’의 새로운 발견을 만들어 나아갈 수 있는 발판이 되고자 한다. </p>
 								
 							</article>
 
@@ -347,7 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<ul class="icons">
 							<li><a href="https://twitter.com/NFTArtistUnion" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://discord.gg/7PryhkPh" target="_blank" class="icon brands fa-discord"><span class="label">Discode</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 						</ul>
 						<p class="copyright">&copy; 2022 NAU All rights reserved.</p>
 					</footer>
