--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="inner">
 								<h1>NFT ARTIST UNION</h1>
 								<!-- <p>공동 로드맵부터 매니지먼트까지 NFT아티스트들의 놀이터</p> -->
-								<p>예술을 가치로 바꾸는 창작놀이터</p>
+								<p>예술로 가치를 만드는 창작놀이터</p>
 
 								
 							</div>
