--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="inner">
 								<h1>NFT ARTIST UNION</h1>
 								<!-- <p>공동 로드맵부터 매니지먼트까지 NFT아티스트들의 놀이터</p> -->
-								<p>예술로 가치를 만드는 창작놀이터</p>
+								<p>함께 즐기며 만드는 NFT ART WORLD</p>
 
 								
 							</div>
@@ -32,8 +32,8 @@
 						<nav>
 							<ul>
 								<li><a href="#ABOUT">ABOUT</a></li>
-								<li><a href="#roadmap">ROAD MAP</a></li>
 								<li><a href="#nftcamp">NFT CAMP</a></li>
+								<li><a href="https://102real.itch.io/nau-art?secret=Wu387wsTltHU53iewDq3UdA4IKY" target='_blank' >가상갤러리</a></li>
 								<li><a href="https://opensea.io/" target="_blank">작품구매</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
