--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 						<!-- ABOUT -->
 							<article id="ABOUT">
 								<h2 class="major">ABOUT</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>NAU는 NFT아티스트의 놀이터이다. NFT라는 새로운 시장에 접근하기 힘든 기존 아티스트들과 함께 놀며 공동의 작품을 창작 하고자 시작하게 되었다.</p>
-									<p>아티스트에게 창작에 집중 할 수 있는 환경을 구축해주고, NFT 아트 ‘예술성’의 새로운 발견을 만들어 나아갈 수 있는 발판이 되고자 한다. </p>
+								<span class="image main"><img src="images/pic01.png" alt="" /></span>
+								<p>NAU는 NFT아티스트의 놀이터입니다. NFT라는 새로운 시장에 접근하기 힘든 기존 아티스트들과 함께 놀며 공동의 작품을 창작 하고자 시작하게 되었습다.</p>
+									<p>아티스트에게 창작에 집중 할 수 있는 환경을 구축함으로, 아티스트들에게 새로운 발견을 만들어 나아갈 수 있는 발판이 되고자 합니다. </p>
 								
 							</article>
 
@@ -66,7 +66,7 @@
 						<!-- nftcamp -->
 							<article id="nftcamp">
 								<h2 class="major">NFT CAMP</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic03.jpeg" alt="" /></span>
 								<p>NAU소속 창작가들은 함께 NFT캠프에 모여 공동작업을 진행합니다. 하나의 주제에서 출발된 캠프는 창작자들의 상상력을 만나 각기 다른 예술작품으로 탄생합니다.</p>
 							</article>
 
