--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#ABOUT">ABOUT</a></li>
 								<li><a href="#nftcamp">NFT CAMP</a></li>
 								<li><a href="https://102real.itch.io/nau-art?secret=Wu387wsTltHU53iewDq3UdA4IKY" target='_blank' >가상갤러리</a></li>
-								<li><a href="https://opensea.io/" target="_blank">작품구매</a></li>
+								<li><a href="https://opensea.io/NFTARTISTUNION" target="_blank">작품구매</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -349,8 +349,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="https://twitter.com/NFTArtistUnion" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/nftartistunion/" target="_blank" class="icon brands fa-instagram"><span class="label">instagram</span></a></li>
 							<li><a href="https://discord.gg/7PryhkPh" target="_blank" class="icon brands fa-discord"><span class="label">Discode</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							
+							
+							</i><!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 						</ul>
 						<p class="copyright">&copy; 2022 NAU All rights reserved.</p>
 					</footer>
